<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/ic_nav_padding_start"
                android:src="@drawable/ic_back" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/patient_signup_title"
                style="@style/LabelStyle"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/patient_signup"
                android:textColor="@color/orange" />

            <EditText
                android:id="@+id/patient_first_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/patient_signup_title"
                android:layout_marginTop="16dp"
                android:hint="@string/first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/patient_last_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/patient_first_name"
                android:layout_marginTop="16dp"
                android:hint="@string/last_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/patient_prefer_name"
                style="@style/EditTextStyle"
                android:layout_below="@id/patient_last_name"
                android:layout_marginTop="16dp"
                android:hint="@string/prefer_name"
                android:inputType="text" />
            <EditText
                android:id="@+id/patient_address"
                style="@style/EditTextStyle"
                android:layout_below="@id/patient_prefer_name"
                android:layout_marginTop="16dp"
                android:hint="@string/address"
                android:inputType="text" />
            <EditText
                android:layout_below="@id/patient_address"
                android:id="@+id/patient_suburb"
                style="@style/EditTextStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/suburb"
                android:inputType="text" />
            <EditText
                android:layout_below="@id/patient_suburb"
                android:id="@+id/patient_state"
                style="@style/EditTextStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/state"
                android:inputType="text" />
            <EditText
                android:layout_below="@id/patient_state"
                android:id="@+id/patient_postcode"
                style="@style/EditTextStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/postcode"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_patient_signup"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/patient_postcode"
                android:layout_marginTop="20dp"
                android:onClick="finishRegister"
                android:text="@string/signup_finish" />
        </RelativeLayout>

    </RelativeLayout>
</layout>
